--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Test Site</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline">hi</h2>
       <a href="https://github.com/dcat52/studios" class="btn">View on GitHub</a>
       <a href="https://github.com/dcat52/studios/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/dcat52/studios/tarball/master" class="btn">Download .tar.gz</a>
