--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-    <!--section class="page-header">
+    <section class="page-header">
       <h1 class="project-name">Test Site</h1>
       <h2 class="project-tagline">hi</h2>
-      <a href="https://github.com/dcat52/studios" class="btn">View on GitHub</a>
+      <!--a href="https://github.com/dcat52/studios" class="btn">View on GitHub</a>
       <a href="https://github.com/dcat52/studios/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/dcat52/studios/tarball/master" class="btn">Download .tar.gz</a>
-    </section-->
+      <a href="https://github.com/dcat52/studios/tarball/master" class="btn">Download .tar.gz</a-->
+    </section>
 
     <section class="main-content">
       <h1>
