--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <footer class="site-footer">
         <p>dcat52 Studios</p>
-        <p>###contact us at:
+        <p><font size="3">contact us at:</font>
           <p><a href="mailto:someone@example.com"></p>
         </p>
         <!--span class="site-footer-owner"><a href="https://github.com/dcat52/studios">Test Site</a> is maintained by <a href="https://github.com/dcat52">dcat52</a>.</span>
