--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <p>Look around, there isn't anything.</p>
 
       <footer class="site-footer">
-        <p>dcat52 Studios</p>
-        <p><font size="4">contact us at:</font></p>
+        <p><font size="4"><b>dcat52 Studios</b></font></p>
+        <p>contact us at:</p>
         <p><a href="mailto:someone@example.com">this email</p>
         <!--span class="site-footer-owner"><a href="https://github.com/dcat52/studios">Test Site</a> is maintained by <a href="https://github.com/dcat52">dcat52</a>.</span>
 
