--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
 <a id="to-my-site" class="anchor" href="#to-my-site" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>To my site!</h3>
 
 <p>Look around, there isn't anything.</p>
-
+      
+<!--- code for Google Adsense --->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-9297837103034607",
+    enable_page_level_ads: true
+  });
+</script>
+      
       <footer class="site-footer">
         <p><font size="4"><b>dcat52 Studios</b></font> <br>
         contact us at: <a href="mailto:someone@example.com">this email </a> or 000-000-0000. </p>
