--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
 
 <h3>
 <a id="to-my-site" class="anchor" href="#to-my-site" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CNU Audio Stream:</h3>
+<h4>(CNUPD Dispatch)
 
-<p>
-  (CNUPD Dispatch)
       <audio width="300" id="mePlayer_25026" src="http://relay.broadcastify.com:80/g5sqjxnhf1pw.mp3?xan=665BA962CD8D516823604C6E63DFEFCA" type="audio/mp3" controls="controls"
                    autoplay="true">
       </audio>
-</p>
+
       
 <!--- code for Google Adsense --->
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
