CNU Stream info

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 </head>
 <body>
   <section class="page-header">
-    <h1 class="project-name">dcat52 Audio Stream Site</h1>
-    <h2 class="project-tagline">Hosted by dcat52</h2>
-    
+    <h1 class="project-name">
+      dcat52 Audio Stream Site
+    </h1>
+    <h2 class="project-tagline">
+      Hosted by dcat52
+    </h2>
   </section>
 
   <section class="main-content">
@@ -21,19 +24,28 @@
       <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
       Welcome
     </h1>
+    <p>
+      This site is hosted to allow for ease in listenting police scanner audio streams.  Use of police scanners makes for a neat hobby, however, the startup cost can be great.  That is where this site comes in; so sit back, relax, and enjoy!
 
+      Currently this site provides access to 2 audio streams as well as links to find more and become involved in this hobby.  
+
+    </p>
     <h3>
       <a id="to-my-site" class="anchor" href="#to-my-site" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
       CNU Audio Stream:
     </h3>
-    
-    <h4>
-      (CNUPD Dispatch)
-    </h4>
-    <audio width="300" id="mePlayer_25026" src="http://relay.broadcastify.com:80/g5sqjxnhf1pw.mp3?xan=665BA962CD8D516823604C6E63DFEFCA" type="audio/mp3" controls="controls"
-    autoplay="true">
-  </audio>
 
+    <p>
+      The first audio stream is that of Christopher Newport University (CNU) Police Department; CNU is a small liberal arts college in Newport news, Virgina.  The scanner station is located approximately 1 mile from the tower.  CNUPD is on the City of Newport News digitally trunked (P25) system.
+
+      <h5>
+        Groups on this stream: CNUPD Dispatch & CNUPD Special Events
+      </h5>
+      <audio width="300" id="mePlayer_25026" src="http://relay.broadcastify.com:80/g5sqjxnhf1pw.mp3?xan=665BA962CD8D516823604C6E63DFEFCA" type="audio/mp3" controls="controls"
+      autoplay="true">
+    </audio>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12733.806412111528!2d-76.49679174999999!3d37.07054965!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa1809303fcb2f3f5!2sChristopher+Newport+University!5e0!3m2!1sen!2sus!4v1487544736262" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </p>
 
   <!-- code for Google Adsense -->
 
