--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>dcat52 Live Audio Stream</title>
+  <title>dcat52 Scanner Audio Stream</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -26,12 +26,13 @@
     </h1>
     <p>
       This site is hosted to allow for ease in listenting police scanner audio streams.  Use of police scanners makes for a neat hobby, however, the startup cost can be great.  That is where this site comes in; so sit back, relax, and enjoy!
-
-      Currently this site provides access to 2 audio streams as well as links to find more and become involved in this hobby.  
-
     </p>
+    <p>
+      Currently this site provides access to 2 audio streams as well as links to find more and become involved in this hobby.  Check below the streams to see more information.  <b>Please SHARE this site!</b>
+    </p>
+
+    <!-- CNU Audio Stream -->
     <h3>
-      <a id="to-my-site" class="anchor" href="#to-my-site" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
       CNU Audio Stream:
     </h3>
 
@@ -47,20 +48,35 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12733.806412111528!2d-76.49679174999999!3d37.07054965!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa1809303fcb2f3f5!2sChristopher+Newport+University!5e0!3m2!1sen!2sus!4v1487544736262" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </p>
 
-  <!-- code for Google Adsense -->
+  <!-- Newport News Audio Stream -->
+  <h3>
+    Newport News Audio Stream:
+  </h3>
 
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-9297837103034607",
-      enable_page_level_ads: true
-    });
-  </script>
+  <p>
+    The second stream is that of the City of Newport News; the city is located in southeastern Virginia as a part of the Hampton Roads area.  The scanner station is located approximately 8-10 miles from the tower.  The city is on the Newport News digitally trunked (P25) system.
 
-  <footer class="site-footer">
-    <p><font size="4"><b>dcat52 Studios</b></font> <br>
-      contact us at: <a href="dcat52Studios@gmail.com">dcat52Studios@gmail.com</a></p>
-    </footer>
-  </section>
+    <h5>
+      Groups on this stream: Fire Dispatch & Fire Tactical (2-6) & Mutual Aid (1-4) & Marine Incident Response Team
+    </h5>
+    <audio width="300" id="mePlayer_10020" src="http://relay.broadcastify.com:80/592003339.mp3?xan=665BA962CD8D516823604C6E63DFEFCA" type="audio/mp3" controls="controls" autoplay="false">
+  </audio>
+</p>
+
+<!-- code for Google Adsense -->
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-9297837103034607",
+    enable_page_level_ads: true
+  });
+</script>
+
+<footer class="site-footer">
+  <p><font size="4"><b>dcat52 Studios</b></font> <br>
+    contact us at: <a href="dcat52Studios@gmail.com">dcat52Studios@gmail.com</a></p>
+  </footer>
+</section>
 </body>
 </html>
