hobby info section created, seperated the stream section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       Currently this site provides access to 2 audio streams as well as links to find more and become involved in this hobby.  Check below the streams to see more information.  <b>Please SHARE this site!</b>
     </p>
 
+
+    <section class="audio-streams">
     <!-- CNU Audio Stream -->
     <h3>
       CNU Audio Stream:
@@ -62,6 +64,11 @@
     <audio width="300" id="mePlayer_10020" src="http://relay.broadcastify.com:80/592003339.mp3?xan=665BA962CD8D516823604C6E63DFEFCA" type="audio/mp3" controls="controls" autoplay="false">
   </audio>
 </p>
+
+  <!-- Hobby Information -->
+  <section class="hobby-information">
+
+  Info will be filled in here...
 
 <!-- code for Google Adsense -->
 
