--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <h5>
       Groups on this stream: Fire Dispatch & Fire Tactical (2-6) & Mutual Aid (1-4) & Marine Incident Response Team
     </h5>
-    <audio width="300" id="mePlayer_10020" src="http://relay.broadcastify.com:80/592003339.mp3?xan=665BA962CD8D516823604C6E63DFEFCA" type="audio/mp3" controls="controls" autoplay="false" autostart="0">
+    <audio width="300" id="mePlayer_10020" src="http://relay.broadcastify.com:80/592003339.mp3?xan=665BA962CD8D516823604C6E63DFEFCA" type="audio/mp3" controls="controls">
   </audio>
 </p>
 
