Hobby info added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </h2>
   </section>
 
+  <hr>
   <section class="main-content">
     <h1>
       <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
@@ -31,8 +32,8 @@
       Currently this site provides access to 2 audio streams as well as links to find more and become involved in this hobby.  Check below the streams to see more information.  <b>Please SHARE this site!</b>
     </p>
 
-
-    <section class="audio-streams">
+  <hr>
+  <section class="audio-streams">
     <!-- CNU Audio Stream -->
     <h3>
       CNU Audio Stream:
@@ -62,14 +63,30 @@
       Groups on this stream: Fire Dispatch & Fire Tactical (2-6) & Mutual Aid (1-4) & Marine Incident Response Team
     </h5>
     <audio width="300" id="mePlayer_10020" src="http://relay.broadcastify.com:80/592003339.mp3?xan=665BA962CD8D516823604C6E63DFEFCA" type="audio/mp3" controls="controls">
-  </audio>
-</p>
+    </audio>
+  </p>
+</section>
 
-  <!-- Hobby Information -->
-  <section class="hobby-information">
+<!-- Hobby Information -->
+<hr>
+<section class="hobby-information">
+  <h3>
+    Hobby Information:
+  </h3>
+  This portion will be updated as I develop my skills in this hobby.
+  <br>
+  <br>
+  First and formost, one of the great resources is the following site: <a href="http://www.radioreference.com/">Radio Reference</a>.  The two main important peices of the site is the Database section, and the Wiki.  
+  <br>
+  <br>
+  For now, take a look around there and become familiar with some terminology.
+  My personal preference for purchases of the scanners is Amazon where I was able to purchase a WS1040 (made by Whistler) and that is what is currently behind the CNU Stream.  The Newport News stream is using a Radio Shack Pro-106.
+  <br>
+  <br>
+  Note that the Hampton Roads area is on an APCO P-25 system, meaning that it is Digitally Trunked and so the scanner must support that technology.  However, a cheap scanner may be used to pickup the local fire department simulcasts, aircrafts, ATC, and even a fast food drive-thru!
 
-  Info will be filled in here...
 
+</section>
 <!-- code for Google Adsense -->
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -84,6 +101,7 @@
   <p><font size="4"><b>dcat52 Studios</b></font> <br>
     contact us at: <a href="dcat52Studios@gmail.com">dcat52Studios@gmail.com</a></p>
   </footer>
-</section>
 </body>
+
+  </section>
 </html>
