Wikipedia info added

--- a/index.html
+++ b/index.html
@@ -82,16 +82,33 @@
   </h3>
   This portion will be updated as I develop my skills in this hobby.
   <br>
-  <br>
   First and formost, one of the great resources is the following site: <a href="http://www.radioreference.com/">Radio Reference</a>.  The two main important peices of the site is the Database section, and the Wiki.  
-  <br>
   <br>
   For now, take a look around there and become familiar with some terminology.
   My personal preference for purchases of the scanners is Amazon where I was able to purchase a WS1040 (made by Whistler) and that is what is currently behind the CNU Stream.  The Newport News stream is using a Radio Shack Pro-106.
   <br>
-  <br>
   Note that the Hampton Roads area is on an APCO P-25 system, meaning that it is Digitally Trunked and so the scanner must support that technology.  However, a cheap scanner may be used to pickup the local fire department simulcasts, aircrafts, ATC, and even a fast food drive-thru!
+  <p>
+  <h4>
+	The term <i>Police Scanner</i>
+  </h4>
+  "A scanner is a radio receiver that can automatically tune, or scan, two or more discrete frequencies, stopping when it finds a signal on one of them and then continuing to scan other frequencies when the initial transmission ceases.
+<br>
+The terms radio scanner or police scanner generally refer to a communications receiver that is primarily intended for monitoring VHF and UHF landmobile radio systems, as opposed to, for instance, a receiver used to monitor international shortwave transmissions.
+<br>
+More often than not, these scanners can also tune to different types of modulation as well (AM, FM, WFM, etc.). Early scanners were slow, bulky, and expensive. Today, modern microprocessors have enabled scanners to store thousands of channels and monitor hundreds of channels per second. Recent models can follow trunked radio systems and decode APCO-P25 digital transmissions. Both hand held and desktop models are available. Scanners are often used to monitor police, fire and emergency medical services. Radio scanning serves an important role in the fields of journalism and crime investigation, as well as a hobby for many people around the world."
+<br>
+Source: <a href="https://en.wikipedia.org/wiki/Scanner_(radio)">Wikipedia.org</a>
+<p>
 
+  <h4>
+	What is a <i>Trunked System</i>?
+  </h4>
+  "A trunked radio system is a complex type of computer-controlled two-way radio system that allows sharing of relatively few radio frequency channels among a large group of users. Instead of assigning, for example, a radio channel to one particular organization at a time, users are instead assigned to a logical grouping, a "talkgroup". When any user in that group wishes to converse with another user in the talkgroup, a vacant radio channel is found automatically by the system and the conversation takes place on that channel. Many unrelated conversations can occur on a channel, making use of the otherwise idle time between conversations. Each radio transceiver contains a microcomputer to control it. A control channel coordinates all the activity of the radios in the system. The control channel computer sends packets of data to enable one talkgroup to talk together, regardless of frequency.
+<br>
+The primary purpose of this type of system is efficiency; many people can carry many conversations over only a few distinct frequencies.[1] Trunking is used by many government entities to provide two-way communication for fire departments, police and other municipal services, who all share spectrum allocated to a city, county, or other entity."
+<br>
+Source: <a href="https://en.wikipedia.org/wiki/Trunked_radio_system">Wikipedia.org</a>
 
 </section>
 <!-- code for Google Adsense -->
