added headers and more hobby info slightly

--- a/index.html
+++ b/index.html
@@ -25,11 +25,18 @@
       Hosted by dcat52
     </h2>
   </section>
-
+	<h4>
+  &nbsp;&nbsp;&nbsp;&nbsp;
+  <a href="#welcome">welcome</a>
+  &nbsp;&nbsp;&nbsp;&nbsp;
+	<a href="#audio-streams">Audio Streams</a>
+  &nbsp;&nbsp;&nbsp;&nbsp;
+  <a href="#hobby-information">Hobby Information</a>
+  </h4>
   <hr>
   <section class="main-content">
     <h1>
-      <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+      <a class="anchor" id="welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
       Welcome
     </h1>
     <p>
@@ -40,7 +47,7 @@
     </p>
 
   <hr>
-  <section class="audio-streams">
+  <section class="audio-streams" id="audio-streams">
     <!-- CNU Audio Stream -->
     <h3>
       CNU Audio Stream:
@@ -76,12 +83,10 @@
 
 <!-- Hobby Information -->
 <hr>
-<section class="hobby-information">
+<section class="hobby-information" id="hobby-information">
   <h3>
     Hobby Information:
   </h3>
-  This portion will be updated as I develop my skills in this hobby.
-  <br>
   First and formost, one of the great resources is the following site: <a href="http://www.radioreference.com/">Radio Reference</a>.  The two main important peices of the site is the Database section, and the Wiki.  
   <br>
   For now, take a look around there and become familiar with some terminology.
@@ -109,6 +114,14 @@ Source: <a href="https://en.wikipedia.org/wiki/Scanner_(radio)">Wikipedia.org</a
 The primary purpose of this type of system is efficiency; many people can carry many conversations over only a few distinct frequencies.[1] Trunking is used by many government entities to provide two-way communication for fire departments, police and other municipal services, who all share spectrum allocated to a city, county, or other entity."
 <br>
 Source: <a href="https://en.wikipedia.org/wiki/Trunked_radio_system">Wikipedia.org</a>
+
+<p>
+<h4>
+Entering the Hobby!
+</h4>
+Check out Amazon.com for some police scanners.  Be sure to do your research though as there are different teirs of pricing based on the system you wish to listen to. <a href="https://www.amazon.com/s/ref=nb_sb_noss_2?url=search-alias%3Daps&field-keywords=police+scanner">Amazon Police Scanners</a>
+<br>
+Check out <a href="http://wiki.radioreference.com/index.php/Scanning_101">Radio Reference Wiki - Scanning 101</a>.
 
 </section>
 <!-- code for Google Adsense -->
