added priv policy

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 	<a href="#audio-streams">Audio Streams</a>
   &nbsp;&nbsp;&nbsp;&nbsp;
   <a href="#hobby-information">Hobby Information</a>
+  &nbsp;&nbsp;&nbsp;&nbsp;
+  <a href="#privacy-policy">Privacy Policy</a>
   </h4>
   <hr>
   <section class="main-content">
@@ -124,7 +126,18 @@ Check out Amazon.com for some police scanners.  Be sure to do your research thou
 Check out <a href="http://wiki.radioreference.com/index.php/Scanning_101">Radio Reference Wiki - Scanning 101</a>.
 
 </section>
-<!-- code for Google Adsense -->
+<section id="privacy-policy">
+  <h3>
+    Privacy Policy:
+  </h3>
+This blog does not share personal information with third parties nor do we store any information about your visit to this blog other than to analyze and optimize your content and reading experience through the use of cookies.
+
+You can turn off the use of cookies at anytime by changing your specific browser settings.
+
+We are not responsible for republished content from this blog on other blogs or websites without our permission.
+
+This privacy policy is subject to change without notice and was last updated on March, 1, 2017.
+</section>
 
 <footer class="site-footer">
   <p><font size="4"><b>dcat52 Studios</b></font> <br>
