about us section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
   <a href="#hobby-information">Hobby Information</a>
   &nbsp;&nbsp;&nbsp;&nbsp;
   <a href="#privacy-policy">Privacy Policy</a>
+  &nbsp;&nbsp;&nbsp;&nbsp;
+  <a href="#about-us">About Us</a>
   </h4>
   <hr>
   <section class="main-content">
@@ -138,6 +140,14 @@ You can turn off the use of cookies at anytime by changing your specific browser
 We are not responsible for republished content from this blog on other blogs or websites without our permission.
 <br><br>
 This privacy policy is subject to change without notice and was last updated on March, 1, 2017.
+</section>
+
+<hr>
+<section id="about-us">
+  <h3>
+    About Us (dcat52 Studios):
+  </h3>
+We specialize in a variety of tech related fields.  One of our ventures is into Police scanners with this site.  Also be sure to check out our <a href="https://play.google.com/store/apps/developer?id=dcat52+Studios">Android apps</a>.
 </section>
 
 <footer class="site-footer">
